--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/viniciussantb/grpc-demo/issues"
   },
-  "homepage": "https://github.com/viniciussantb/grpc-demo#readme"
+  "homepage": "https://github.com/viniciussantb/grpc-demo#readme",
+  "dependencies": {
+    "google-protobuf": "^3.21.2"
+  }
 }
